fix(listbox-button): alignment

--- a/src/less/listbox-button/listbox-button.less
+++ b/src/less/listbox-button/listbox-button.less
@@ -14,6 +14,13 @@ span.listbox-button {
     display: inline-block;
 }
 
+.listbox-button .btn {
+    // these values are used elsewhere in listbox
+    // in a non-standard manner and don't have variables
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 span.listbox-button--fluid,
 span.listbox-button--fluid .expand-btn,
 span.listbox-button--fluid .btn {
